--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "wa-gateway-trello",
+  "name": "wa-getaway-trello",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "@adiwajshing/baileys": "^6.7.8",
-    "express": "^4.18.2",
-    "qrcode": "^1.5.3",
-    "pino": "^9.0.0"
+    "@whiskeysockets/baileys": "^6.7.0",
+    "dotenv": "^16.4.1",
+    "express": "^4.19.2",
+    "pino": "^9.0.0",
+    "qrcode": "^1.5.3"
   }
 }
