--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "wa-getaway-trello",
+  "name": "wa-qr-test",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
+  "license": "MIT",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.5.0",
+    "@whiskeysockets/baileys": "^6.0.0",
     "express": "^4.18.2",
-    "pino": "^8.14.1",
-    "qrcode": "^1.5.1"
+    "pino": "^9.0.0",
+    "qrcode": "^1.5.3"
   }
 }
