--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "wa-qr-test",
+  "name": "wa-getaway-trello",
   "version": "1.0.0",
   "main": "server.js",
-  "license": "MIT",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": ">=18" },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.0.0",
-    "express": "^4.18.2",
-    "pino": "^9.0.0",
+    "@whiskeysockets/baileys": "^6.7.8",
+    "express": "^4.19.2",
+    "pino": "^9.3.2",
     "qrcode": "^1.5.3"
   }
 }
